# FSAI_Simulation_C

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeListsArm.txt  CarStateLog.csv  RALog.csv  README.md  build.sh  debug.sh  imgui.ini  rebuild.sh  testGen.cpp
apps/: CMakeLists.txt  fsai_run.cpp  svcu_run.cpp
apps/include/apps/: runtime_telemetry.hpp
apps/sim_viewer/: fsai_run.cpp
apps/src/: Graphics.cpp
apps/svcu_runner/: main.cpp
common/: CMakeLists.txt
common/include/: vehicle_parameters.hpp
common/include/common/: logging.hpp  types.h
common/include/io/: config_manager.hpp
common/include/telemetry/: telemetry.hpp  telemetry_imgui.hpp
common/physics/: Collision.c  Vector.h
common/src/math/: Collision.c  Transform.c  Vector.c
common/src/telemetry/: Telemetry.cpp  telemetry.cpp
common/src/time/: budget.cpp  fsai_clock.cpp
common/src/ui/: KeyboardInputHandler.c
common/telemetry/: Telemetry.c  Telemetry.cpp  Telemetry.hpp
common/time/: budget.cpp  budget.h  fsai_clock.cpp
control/: BoundaryEstimation.cpp  CMakeLists.txt  build.sh  centerline.cpp  centerline.hpp  centerline.prot.cpp  centerline.prot.hpp  checkpoint_matching.cpp  checkpoint_matching.hpp  controller.c  controller.cpp.save  controller.prot.c  controller.prot.h  fsai_plan.cpp  input.txt  utils.cpp  utils.h
control/include/control/: ai2vcu_adapter.hpp  api.h  centerline.hpp  centerline.prot.hpp  clc_controller.hpp  controller.hpp  controller.prot.h  racing_algorithm.h  scheduler.hpp
control/runtime_cpp/: ai2vcu_adapter.cpp  ai2vcu_adapter.hpp  can_iface.cpp  can_iface.hpp
control/src/: ai2vcu_adapter.cpp  api.c  boundary_assign.cpp  boundary_fit.cpp  centerline.cpp  centerline.hpp  centerline.prot.cpp  centerline_spline.cpp  clc_controller.cpp  control_node.cpp  controller.hpp  controller.prot.c  controller_lat.cpp  controller_lon.cpp  planner.cpp  scheduler.cpp  scheduler.hpp
control/src/algorithms/: racing_algorithm.c
control/test/: TestSteering.c  TestThrottle.c
control/tests/: README.md  TestSteering.c  TestThrottle.c
io/: CMakeLists.txt
io/camera/sim_stereo/: cone_mesh.cpp  cone_mesh.hpp  fbo_stereo.cpp  fbo_stereo.hpp  gl_context_sdl.cpp  ground_plane.cpp  ground_plane.hpp  readback_pbo.cpp  readback_pbo.hpp  shader_program.cpp  shader_program.hpp  sim_stereo_source.cpp  sim_stereo_source.hpp
io/can/: adsdv_dbc.cpp  can_iface.cpp  can_link.cpp  can_transport.hpp  link.cpp  socketcan.cpp  udp_can.cpp
io/can/src/: can_link.cpp  loopback_can.cpp  udp_can.cpp
io/include/: io_bus.hpp
planning/: BoundaryEstimation.cpp  CMakeLists.txt  RacingAlgorithm.h
planning/test/: TestSteering.c  TestThrottle.c
sim/: CMakeLists.txt  World.cpp  World.hpp
sim/app/: control_signal_adapter.cpp  control_signal_adapter.hpp  fsai_run.cpp  gui_world_adapter.cpp  gui_world_adapter.hpp  runtime_telemetry.hpp
sim/include/: PhysicsDiagnostics.hpp  SanityChecks.hpp  logging.hpp
sim/include/human/: IUserInput.hpp
sim/include/io/: istereosource.h
sim/include/models/: longitudinal_parameters.hpp  steering_parameters.hpp  tireParameters.hpp  unitConversion.hpp  vehicle_dynamics_ks_cog.hpp
sim/include/sim/: CoordinateFrames.hpp  MissionRuntimeState.hpp  World.hpp  WorldConfig.hpp  WorldConfigLoader.hpp  WorldRuntime.hpp  cone_constants.hpp  cone_types.hpp  mission_descriptor.hpp
sim/include/simulation/: model_timing.hpp  simulation_daemon.hpp  user_input.hpp  vehicle_simulator.hpp
sim/src/: MissionRuntimeState.cpp  World.cpp  WorldConfig.cpp  WorldConfigLoader.cpp  WorldRuntime.cpp  io_bus.cpp  logging.cpp  main.cpp
sim/src/integration/: adapter.cpp  csv_logger.cpp  fake_providers.cpp  path_truth.cpp  provider_registry.cpp  runtime_config.cpp  stereo_display.cpp  terminal_keyboard.cpp
sim/src/mission/: TrackCsvLoader.cpp
sim/src/models/: tire_model.cpp
sim/src/simulation/: loss_of_control_detector.cpp  model_timing.cpp  simulation_daemon.cpp  vehicle_simulator.cpp
sim/src/svcu/: svcu_runner.cpp
sim/src/tests/: MissionRuntimeStateTest.cpp  WorldConfigLoaderTest.cpp
sim/src/track/: PathConfig.cpp  PathConfig.hpp  PathGenerator.cpp  PathGenerator.hpp  TrackGenerator.cpp
sim/src/vehicle/: BrakeController.cpp  DynamicBicycle.cpp  EVPowertrain.cpp  VehicleModel.cpp  VehicleParam.cpp  VehicleParam.hpp  WheelsInfo.c  WheelsInfo.h
sim/src/vehicle_dynamics/: VehicleDynamics.cpp  VeloxVehicleDynamics.cpp
sim/src/world/: CollisionService.cpp  CollisionService.hpp  ResetPolicy.cpp  ResetPolicy.hpp  TrackBuilder.cpp  TrackBuilder.hpp  WorldRenderAdapter.cpp  WorldRenderAdapter.hpp
sim/svcu/: adsdv_dbc.cpp  adsdv_dbc.hpp  can_link.cpp  can_link.hpp  link.cpp  socketcan.cpp  socketcan.hpp  svcu_main.cpp  svcu_runner.cpp  svcu_runner.hpp
sim/svcu/tests/: SvcuIntegrationTests.cpp
sim/tests/: README.md  WorldBoundaryCollisionTest.cpp  WorldConfigLoaderTest.cpp  WorldGateTest.cpp  WorldTestHelper.hpp
sim/tests/gtest/: gtest.h
sim/tests/svcu/: SvcuIntegrationTests.cpp
sim/track/: PathConfig.cpp  PathGenerator.cpp  TrackGenerator.cpp  TrackGenerator.hpp  path_config.c  path_config.h  path_generator.c  path_generator.h  track_generator.c  track_generator.h
sim/track/test/: TestTrackGeneration.cpp
sim/vehicle/: BrakeController.hpp  DynamicBicycle.cpp  DynamicBicycle.h  DynamicBicycle.hpp  EVPowertrain.hpp  Input.c  Input.h  Param.h  State.h  VehicleInput.hpp  VehicleModel.h  VehicleParam.c  VehicleParam.cpp  VehicleParam.hpp  VehicleState.hpp
sim/vehicle/Configs/: configDry.yaml
sim/vehicle/test/: TestDynamicBicycle.c  TestDynamicBicycle.cpp
vision/: CMakeLists.txt  rebuild-vision.sh
vision/docs/: CentroidRecovery.md
vision/proto_py/: README.md
vision/runtime_cpp/app/: main.cpp
vision/runtime_cpp/providers/: fake_from_sim.cpp  sim_camera.cpp
vision/runtime_cpp/src/:  mapper.cpp  CMakeLists.txt  asynch_logger.cpp  asynch_logger.hpp  bayesian_mapper.cpp  bayesian_mapper.hpp  centroid.cpp  centroid.hpp  cone_tracker.cpp  cone_tracker.hpp  detect.cpp  detect.hpp  detection_buffer_registry.cpp  detection_preview.cpp  (+14 more)
vision/tests/: README.md
(+263 files in other folders)
